--- a/Week11Ex/Billboard_Extended/billboard.css
+++ b/Week11Ex/Billboard_Extended/billboard.css
@@ -24,6 +24,12 @@
     width: 50%;
 }
 
+img{
+    width: 180px;
+    height: 180px;
+}
+
+
 caption{
     font-family:Arial;
     font-weight:bold;
